<resources>
    <string name="app_name">GiftCarder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="newNotiNum">0</string>
    <string name="title_activity_noti_full2">NotiFull2Activity</string>
    <string name="title_activity_trade_request">Trade Request</string>
    <string name="title_activity_accept_trade">AcceptTradeActivity</string>
    <string name="title_activity_propose_counter_trade">ProposeCounterTradeActivity</string>
    <string name="title_activity_current_trades">CurrentTradesActivity</string>
    <string name="title_activity_create_trade_offer">CreateTradeOfferActivity</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_digits_only">Enter phone (digits only)</string>
    <string name="enter_phone_format">Enter phone: ###-###-####</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="username">Username</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="newTradeNotiNum">Trades</string>
    <string name="newFriendNotiNum">Friends</string>

    <string name="title_activity_item">item</string>
    <string name="title_activity_inventory">inventory</string>
    <string name="icon_description">Icon</string>


    <!-- ITEM DROP DOWN MENU STUFF -->
    <string-array name="Category">
        <item>All</item>
        <item>Food-Beverage</item>
        <item>Clothing</item>
        <item>Home-garden</item>
        <item>Electronics</item>
        <item>Department Store (e.g. Walmart)</item>
        <item>Services</item>
        <item>Entertainment</item>
        <item>Online Retailers (e.g. Amazon)</item>
        <item>Health-beauty</item>
        <item>Other</item>
    </string-array>

    <string-array name="Quality">
        <item>Excellent</item>
        <item>Good</item>
        <item>Okay</item>
        <item>Poor</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="addcard">Add New GiftCard</string>
    <string name="usericon">UserIcon</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="invdetails">Inventory Details</string>
    <string name="title_activity_inv_details">InvDetailsActivity</string>
    <string name="userinventory">User Inventory</string>
    <!-- ITEM DROP DOWN MENU STUFF DONE -->
    <string name="title_activity_browse">Browse</string>

    <string name="browseGo">Go</string>
    <string name="GiftCarder">GiftCarder</string>
    <string name="download_images">Download images:</string>
    <string name="yes">Yes</string>
    <string name="log_out">Log out</string>
    <string name="logged_in_as">Logged in as: username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Logout">Logout</string>
    <string name="make_offer">Make Offer</string>
    <string name="value">Value</string>
    <string name="dollar_sign">$</string>
    <string name="name">Name</string>
    <string name="merchant">Enter merchant</string>
    <string name="enter_value">Enter value</string>
    <string name="category">Category</string>
    <string name="Quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="quality">Quality</string>
    <string name="comments">Comments</string>
    <string name="enter_comments">Enter comments (optional)</string>
    <string name="make_public">Make Public</string>
    <string name="save_button">SAVE</string>
    <string name="inv_list_image_desc">GiftCard Image</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_activity_item_details">ItemDetailsActivity</string>
    <string name="count">Count:</string>
    <string name="value_colon">Value:</string>
    <string name="clone_item">Clone Item</string>
    <string name="user_profile">User Profile</string>
    <string name="default_owner_title">New GiftCard</string>
    <string name="downloadImages">Download Images</string>

    <!--retrieved from Fokert, 11/23/15, http://www.dibbus.com/2011/02/gradient-buttons-for-android/-->
    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>
