<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ItemActivity"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:id="@+id/ID_pictureOfGiftCard"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/card_icon"
                    android:onClick="takeGiftCardPic"
                    android:padding="10dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:id="@+id/editAndOfferButton"
                    android:layout_gravity="end"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ID_pictureOfGiftCard"
                    android:background="#ff9600"
                    android:textSize="20dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="start"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text = "@string/dollar_sign"
                    android:textSize="40dp"
                    android:textColor="#2bff00"
                    android:id="@+id/editText" />

                <EditText
                    android:layout_width="330dp"
                    android:layout_height="50dp"
                    android:background="#ffffff"
                    android:hint="@string/enter_value"
                    android:textSize="20sp"
                    android:id="@+id/ID_item_value"
                    android:singleLine="true"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="start"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:hint="@string/merchant"
                android:textSize="20sp"
                android:id="@+id/ID_item_Name"
                android:singleLine="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="start"
                 />

            <Spinner
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/ID_categorySpin"
                android:entries="@array/Category"
                android:spinnerMode="dialog"
                android:textSize="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Quantity"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="start"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ffffff"
                android:hint="@string/enter_quantity"
                android:textSize="20dp"
                android:id="@+id/ID_quantity"
                android:inputType="number"
                android:singleLine="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quality"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="left"
                />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/ID_qualitySpin"
                android:entries="@array/Quality"
                android:spinnerMode="dialog"
                android:textSize="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="start"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:textSize="20dp"
                android:id ="@+id/ID_comments"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_public"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="start"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ID_checkbox"
                android:checked="false" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:id="@+id/ID_savegiftcard"
                android:layout_gravity="end"
                android:background="#ffb700"
                android:textSize="20dp"
                android:onClick="saveGiftCardInfo"
                android:visibility="visible"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
