<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.ualberta.smaccr.giftcarder.SettingsView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/logged_in_as"
        android:id="@+id/loggedInAsTextView"
        android:paddingBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/edit_profile"
        android:id="@+id/editProfileButton"
        android:onClick="onEditProfileButtonClick"
        android:layout_gravity="bottom|top" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Logout"
        android:id="@+id/logoutButton"
        android:onClick="onLogoutButtonClick"
        android:layout_gravity="bottom|top" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="Sync all"
        android:id="@+id/syncButton"
        android:onClick="onSyncAllButtonClick"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/download_images"
            android:id="@+id/downloadTextView"
            android:layout_gravity="center"
            android:layout_weight="0.20" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/downloadCheckBox"
            android:checked="false" />

    </LinearLayout>

</LinearLayout>
