<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <ImageView
                    android:layout_width="224dp"
                    android:layout_height="224dp"
                    android:id="@+id/userProfilePicture"
                    android:src="@drawable/user_icon"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/saveButton"
                    android:background="#ff9600"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="onSaveButtonClick"
                    android:visibility="invisible" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="left"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fdfff8"
                android:textSize="20dp"
                android:singleLine="true"
                android:id="@+id/usernameTextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="left"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fdfff8"
                android:textSize="20dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:id="@+id/cityTextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="left"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fdfff8"
                android:textSize="20dp"
                android:singleLine="true"
                android:inputType="phone"
                android:id="@+id/phoneTextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:background="#938f90"
                android:textColor="#000000"
                android:textSize="20dp"
                android:gravity="left"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fdfff8"
                android:textSize="20dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:id="@+id/emailTextView" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>