<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.ualberta.smaccr.giftcarder.InventoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="143dp"
            android:layout_height="143dp"
            android:id="@+id/userProfilePictureInventory"
            android:src="@drawable/user_icon"
            android:contentDescription="@string/usericon"
            android:onClick="getUserProfile"
            android:paddingTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/username"
                android:id="@+id/tvUsernameInventory"
                android:textSize="28sp"
                android:layout_gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invdetails"
                android:id="@+id/invDetailsButtonInventory"
                android:layout_gravity="center"
                android:onClick="inventoryDetailsButton" />

        </LinearLayout>

    </LinearLayout>


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friendInventoryListViewID" />

</LinearLayout>