<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


<!-- Kill all from here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inventory"
            android:id="@+id/button3"

            android:onClick="invClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Browse"
            android:id="@+id/button4"
            android:onClick="fIXMElogin"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
<!-- to here-->
    <EditText
        android:id="@+id/enterUsername"
        android:hint="@string/enter_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#938f90"
        android:padding="12dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:background="#8dd35f"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:clickable="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/registerButton"
            android:background="#ff9600"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:onClick="registerNewUser" />
    </LinearLayout>


</LinearLayout>
